--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "engines": {
     "node": "16.x"
   },
